# LojaFlow

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  database.py  session.py
app/controllers/: pos_controller.py
app/models/: __init__.py  customer.py  product.py  sale.py  user.py
app/services/: auth_service.py  backup_service.py  inventory_service.py  printer_service.py  product_service.py  report_service.py  sale_service.py  settings_service.py  user_service.py
app/utils/: logger.py
app/views/: login_dialog.py  main_window.py
app/views/customers/: customer_history_dialog.py  customers_view.py
app/views/dashboard/: dashboard_view.py
app/views/inventory/: inventory_view.py
app/views/pos/: payment_dialog.py  pos_view.py
app/views/products/: product_form.py  products_view.py
app/views/reports/: reports_view.py
app/views/sales/: sale_detail_dialog.py  sales_history_view.py
app/views/settings/: settings_view.py  user_form_dialog.py  user_management_view.py
assets/: style.qss
tests/: test_auth_service.py  test_customer_service.py  test_inventory_service.py  test_product_service.py  test_report_service.py  test_sale_service.py
